--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Eventually by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Eventually by HTML5 UP</title>
+		<title>PrimeFix Maintenance & Construction</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,33 +9,50 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<h1>Eventually</h1>
-				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
-			</header>
+		<header id="header">
+			<h1>PrimeFix Maintenance & Construction</h1>
+			<p>Your trusted partner for Project Management, Construction, Maintenance, and Financial Planning services. We provide high-quality solutions to ensure your projects run smoothly and efficiently.</p>
+		</header>
 
-		<!-- Signup Form -->
-			<form id="signup-form" method="post" action="#">
-				<input type="email" name="email" id="email" placeholder="Email Address" />
-				<input type="submit" value="Sign Up" />
+		<!-- Services Section -->
+		<section id="services">
+			<h2>Our Services</h2>
+			<ul>
+				<li><strong>Project Management:</strong> Expert handling of projects from inception to completion, ensuring timelines and budgets are met.</li>
+				<li><strong>Construction Management:</strong> Overseeing the construction process to ensure quality, safety, and efficiency.</li>
+				<li><strong>Operations Management:</strong> Optimizing business operations and ensuring your projects are efficiently executed.</li>
+				<li><strong>Cost and Estimation:</strong> Providing accurate cost estimates and managing expenses to keep your project on budget.</li>
+				<li><strong>Financial Planning:</strong> Helping you plan financially for your project’s success.</li>
+				<li><strong>Business Planning and Proposals:</strong> Crafting effective business plans and proposals to win new projects and maintain success.</li>
+				<li><strong>Construction and Maintenance Services:</strong> Providing ongoing construction and maintenance services to keep your business running smoothly.</li>
+			</ul>
+		</section>
+
+		<!-- Call to Action -->
+		<section id="cta">
+			<h2>Ready to Start Your Project?</h2>
+			<p>Contact us today to discuss your project and get a customized solution!</p>
+			<form id="contact-form" method="post" action="#">
+				<input type="email" name="email" id="email" placeholder="Your Email Address" />
+				<input type="submit" value="Contact Us" />
 			</form>
+		</section>
 
 		<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</footer>
+		<footer id="footer">
+			<ul class="icons">
+				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+				<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+				<li><a href="mailto:info@primefix.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+			</ul>
+			<ul class="copyright">
+				<li>&copy; 2025 PrimeFix Maintenance & Construction. All rights reserved.</li>
+			</ul>
+		</footer>
 
 		<!-- Scripts -->
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
