--- a/index.html
+++ b/index.html
@@ -1,54 +1,86 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>PrimeFix Maintenance & Construction</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<!-- Modernized font link -->
+		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 	</head>
 	<body class="is-preload">
 
-		<!-- Header -->
+		<!-- Header Section with Futuristic Styling -->
 		<header id="header">
-			<h1>PrimeFix Maintenance & Construction</h1>
-			<p>Your trusted partner for Project Management, Construction, Maintenance, and Financial Planning services. We provide high-quality solutions to ensure your projects run smoothly and efficiently.</p>
+			<div class="header-container">
+				<h1 class="main-title">PrimeFix Maintenance & Construction</h1>
+				<p class="subtitle">Innovative Solutions for Project Management, Construction, and Maintenance. Your trusted partner for success.</p>
+				<a href="#services" class="btn-main">Explore Our Services</a>
+			</div>
 		</header>
 
-		<!-- Services Section -->
-		<section id="services">
-			<h2>Our Services</h2>
-			<ul>
-				<li><strong>Project Management:</strong> Expert handling of projects from inception to completion, ensuring timelines and budgets are met.</li>
-				<li><strong>Construction Management:</strong> Overseeing the construction process to ensure quality, safety, and efficiency.</li>
-				<li><strong>Operations Management:</strong> Optimizing business operations and ensuring your projects are efficiently executed.</li>
-				<li><strong>Cost and Estimation:</strong> Providing accurate cost estimates and managing expenses to keep your project on budget.</li>
-				<li><strong>Financial Planning:</strong> Helping you plan financially for your project’s success.</li>
-				<li><strong>Business Planning and Proposals:</strong> Crafting effective business plans and proposals to win new projects and maintain success.</li>
-				<li><strong>Construction and Maintenance Services:</strong> Providing ongoing construction and maintenance services to keep your business running smoothly.</li>
-			</ul>
+		<!-- Services Section (Classic and Clean Layout) -->
+		<section id="services" class="services-section">
+			<div class="section-container">
+				<h2 class="section-title">Our Expertise</h2>
+				<div class="services-grid">
+					<div class="service-card">
+						<h3>Project Management</h3>
+						<p>We manage projects from concept to completion, ensuring that timelines, costs, and goals are met with precision.</p>
+					</div>
+					<div class="service-card">
+						<h3>Construction Management</h3>
+						<p>Efficient management of construction operations, ensuring your building projects are executed smoothly and on time.</p>
+					</div>
+					<div class="service-card">
+						<h3>Operations Management</h3>
+						<p>Optimizing your operational processes to enhance productivity and achieve long-term business goals.</p>
+					</div>
+					<div class="service-card">
+						<h3>Cost and Estimation</h3>
+						<p>Providing accurate estimates and cost management to ensure your projects stay on budget.</p>
+					</div>
+					<div class="service-card">
+						<h3>Financial Planning</h3>
+						<p>Strategic financial planning to ensure your projects are financially sustainable and successful.</p>
+					</div>
+					<div class="service-card">
+						<h3>Business Planning & Proposals</h3>
+						<p>Developing detailed business plans and proposals to secure the future of your projects and ventures.</p>
+					</div>
+					<div class="service-card">
+						<h3>Construction & Maintenance</h3>
+						<p>Comprehensive construction and maintenance services to ensure your assets are built to last and continuously supported.</p>
+					</div>
+				</div>
+			</div>
 		</section>
 
-		<!-- Call to Action -->
-		<section id="cta">
-			<h2>Ready to Start Your Project?</h2>
-			<p>Contact us today to discuss your project and get a customized solution!</p>
-			<form id="contact-form" method="post" action="#">
-				<input type="email" name="email" id="email" placeholder="Your Email Address" />
-				<input type="submit" value="Contact Us" />
-			</form>
+		<!-- CTA Section (Futuristic, Clean Design) -->
+		<section id="cta" class="cta-section">
+			<div class="cta-container">
+				<h2>Ready to Bring Your Project to Life?</h2>
+				<p>Get in touch with us and start working on a customized plan for your needs today!</p>
+				<form id="contact-form" method="post" action="#">
+					<input type="email" name="email" id="email" placeholder="Enter Your Email" class="input-field" required />
+					<input type="submit" value="Contact Us" class="btn-submit" />
+				</form>
+			</div>
 		</section>
 
-		<!-- Footer -->
-		<footer id="footer">
-			<ul class="icons">
-				<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-				<li><a href="mailto:info@primefix.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
-			</ul>
-			<ul class="copyright">
-				<li>&copy; 2025 PrimeFix Maintenance & Construction. All rights reserved.</li>
-			</ul>
+		<!-- Footer Section (Sleek and Modern) -->
+		<footer id="footer" class="footer-section">
+			<div class="footer-container">
+				<ul class="social-icons">
+					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+					<li><a href="mailto:info@primefix.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
+				</ul>
+				<ul class="copyright">
+					<li>&copy; 2025 PrimeFix Maintenance & Construction. All Rights Reserved.</li>
+				</ul>
+			</div>
 		</footer>
 
 		<!-- Scripts -->
