--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 	</head>
 	<body class="is-preload">
 
+		<!-- Navbar Section -->
+		<nav id="navbar" class="navbar">
+			<div class="navbar-container">
+				<a href="#header" class="navbar-logo">PrimeFix</a>
+				<ul class="navbar-links">
+					<li><a href="#services">Services</a></li>
+					<li><a href="#cta">Contact</a></li>
+					<li><a href="#footer">About Us</a></li>
+				</ul>
+			</div>
+		</nav>
+
 		<!-- Header Section with Futuristic Styling -->
 		<header id="header">
 			<div class="header-container">
